Сделал с дроблением шага

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(MethodsOfOptimization)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(MethodsOfOptimization main.cpp GradientMethod.cpp GradientMethod.h Gnuplot.h Color.h Method.h BarrierFunctionMethod.cpp BarrierFunctionMethod.h Method.cpp)
+#add_executable(MethodsOfOptimization main.cpp GradientMethod.cpp GradientMethod.h Gnuplot.h Color.h Method.h BarrierFunctionMethod.cpp BarrierFunctionMethod.h Method.cpp Point.h)
+add_executable(MethodsOfOptimization main.cpp GradientMethod.cpp GradientMethod.h Gnuplot.h Color.h Method.h Method.cpp Point.h)
